--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -6,7 +6,7 @@
     width: 300px;
     background-color: #fff;
     position: absolute;
-    bottom: -120px;
+    top: 85%;
     left: 20%;
     z-index: 3;
     border-radius: 15px;
