--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -51,8 +51,8 @@
     }
 
     &-board-change {
-
         select {
+            cursor: pointer;
             outline: 0;
             color: #111;
             font-size: 16px;
@@ -60,6 +60,7 @@
         }
 
         option {
+            cursor: pointer;
             border: none;
         }
         
